# agentic_travelq

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  ec2-setup.sh  ecr-lifecycle-policy.json  env.prod.example
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  celery_app.py  main.py  pyproject.toml  requirements.txt  run_planning.py
backend/agents/: base_agent.py  events_agent.py  flight_agent.py  hotel_agent.py  orchestrator_agent.py  places_agent.py  preprocessor_agent.py  user_proxy_agent.py  weather_agent.py  weather_agent_old.py
backend/api/: main.py
backend/api/routes/: trips.py
backend/config/: settings.py
backend/models/: trip.py  trip_search_request.py  user_preferences.py
backend/services/: airport_lookup_service.py  amadeus_service.py  google_places_service.py  trip_planning_service.py  trip_redis_service.py  weather_service.py  xotelo_service.py
backend/services/storage/: inmemory_storage.py  storage_base.py
backend/tasks/: celery_trip_task.py
backend/utils/: booking_links.py  icon_mapper.py  logging_config.py  request_converter.py
config/: app_config.example.yaml  app_config.yaml
docs/: AWS Deployment Guide.md  AWS Deployment.txt  AWS-Commands_to_deploy.txt  AWS_Amplify_Deployment_explanation.md  AWS_Deployment_docker_compose_prod.md  AWS_Deployment_step_by_stp_guide.md  AWS_nginx_default_conf.md  Amplify_migration_guide.md  Autogen Multi-Agent Implementation.md  Autogen Orchestration Design.txt  CI_CD_Deployment_explanation.md  CI_CD_Dev_Prod_Deployment_Explanation.md  CI_CD_GitHub_plan.txt  (+6 more)
(+45 files in other folders)
