[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "amadeus>=12.0.0",
    "anthropic>=0.79.0",
    "autogen>=0.10.5",
    "celery>=5.6.2",
    "colorlog>=6.10.1",
    "fastapi>=0.128.5",
    "googlemaps>=4.10.0",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.1.1",
    "requests>=2.32.5",
    "supabase>=2.27.3",
    "uvicorn[standard]>=0.40.0",
]
